# lfm2.5-audio-glasses-feasibility

./: .gitignore  README.md  pyproject.toml
android-app/: THIRD_PARTY_NOTICES.md  model-files.sha256  runner-files.sha256  settings.gradle
docs/: ANDROID_DEPLOYMENT.md  EXPERIMENTS.md
reports/: aihub_component_results.json  aihub_component_results.md  aihub_readiness.md  aihub_real_detok_latest.txt  backbone_attention_cached_decode_probe.json  backbone_attention_probe.json  backbone_conv_cached_decode_probe.json  backbone_conv_probe.json  colab_bf16_report.md  colab_candidate_quality_latest.txt  depth_export.json  detok_probe.json  fastconformer_aihub_first_pass.md  fastconformer_export.json  local_export_validation.json  local_q4_smoke.json  operator_matrix.csv
scripts/: analyze_detok_waveform_error.py  build_android_apk.sh  build_install_phone_apk.sh  build_memory_ledger.py  build_public_data_bundle.py  build_public_report.py  capture_android_phase0.sh  capture_depth_calibration.py  capture_encoder_golden.py  capture_or_export_backbone_probes.py  capture_or_export_cached_decode_probes.py  capture_or_export_depth_probe.py  capture_or_export_detok_probe.py  check_environment.py  colab_candidate_quality_launcher.py  colab_candidate_quality_runner.py  colab_lfm_bf16_config.json  colab_lfm_bf16_launcher.py  colab_lfm_bf16_runner.py  colab_smoke.py  component_utils.py  configure_native_runtime.sh  download_lfm_q4_models.sh  evaluate_moonshine_local.py  evaluate_quality_locally.py  export_encoder_fixed.py  inspect_android_target.sh  install_native_phone_demo.sh  (+29 more)
(+330 files in other folders)
